# cs702-proj

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json
.github/workflows/: publish.yml
analysis/: pyproject.toml
analysis/conf/base/: catalog.yml  parameters.yml
analysis/notebooks/: eda_session_salvage.ipynb
analysis/src/scrollstudy_analysis/: __init__.py  __main__.py  settings.py
analysis/src/scrollstudy_analysis/pipelines/feature_engineering/: nodes.py
analysis/src/scrollstudy_analysis/pipelines/reporting/: nodes.py
analysis/src/scrollstudy_analysis/pipelines/statistical_tests/: nodes.py  pipeline.py
backend/: package-lock.json  package.json
backend/src/: app.js
data/: egress_supabase.py  import_to_postgres.py
datagen/: config.yaml  pyproject.toml
datagen/datagen/: db.py  memory.py  profiles.py  survey.py  telemetry.py
doc/: _quarto.yml  index.qmd  proposal.qmd  references.bib  report.qmd
doc/_freeze/report/execute-results/: html.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: PostCard.jsx
frontend/src/components/feed/: FrictionFeed.jsx  InfiniteScrollFeed.jsx
frontend/src/components/friction/: ButtonToggleFriction.jsx  (+5 more)
frontend/src/data/: posts.js
frontend/src/hooks/: useDwellTime.js  useScrollTracker.js
frontend/src/pages/: FeedPage.jsx  MemoryTestPage.jsx  SurveyPage.jsx  ThankYouPage.jsx
frontend/src/services/: api.js
frontend/src/store/: sessionStore.js
infra/db/: init.sql
(+4 files in other folders)
